--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -3,4 +3,5 @@
 <% @notes.each do |n| %>
 <h2><%= n.title %></h2>
 <%= link_to 'View Note', note_path(n) %>
+<%= link_to 'Edit Note', edit_note_path(n) %>
 <% end %>
