delete functionality added

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,4 +4,5 @@
 <h2><%= n.title %></h2>
 <%= link_to 'View Note', note_path(n) %>
 <%= link_to 'Edit Note', edit_note_path(n) %>
+<%= link_to 'Delete Note', n, method: :delete %>
 <% end %>
